// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`headline renders correctly with custom props 1`] = `
<DocumentFragment>
  .emotion-2 {
  padding: 1px 0px;
}

@media screen and (max-width:479px) {
  .emotion-2 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width:480px) and (max-width:767px) {
  .emotion-2 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-2 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-2 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-1 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-1 svg {
  fill: #0a0a0a;
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a68c1;
  text-transform: uppercase;
}

.emotion-0 svg {
  fill: #0a68c1;
}

@media screen and (max-width:479px) {
  .emotion-0 {
    margin-right: 12px;
  }
}

@media screen and (min-width:480px) and (max-width:767px) {
  .emotion-0 {
    margin-right: 12px;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

<section
    class="emotion-2"
  >
    <h5
      class="nk-headline-kicker emotion-0"
    >
      this is kicker 
    </h5>
    <h4
      class="nk-headline-heading emotion-1"
    >
      test
    </h4>
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with default props, just heading 1`] = `
<DocumentFragment>
  .emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:479px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width:480px) and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<section
    class="emotion-1"
  >
    <h1
      class="nk-headline-heading emotion-0"
    >
      test
    </h1>
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with default props, with heading and kicker 1`] = `
<DocumentFragment>
  .emotion-2 {
  padding: 1px 0px;
}

@media screen and (max-width:479px) {
  .emotion-2 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width:480px) and (max-width:767px) {
  .emotion-2 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-2 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-2 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-1 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-1 svg {
  fill: #0a0a0a;
}

.emotion-0 {
  color: #0a68c1;
  text-transform: uppercase;
}

.emotion-0 svg {
  fill: #0a68c1;
}

@media screen and (max-width:479px) {
  .emotion-0 {
    margin-right: 12px;
  }
}

@media screen and (min-width:480px) and (max-width:767px) {
  .emotion-0 {
    margin-right: 12px;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

<section
    class="emotion-2"
  >
    <span
      class="nk-headline-kicker emotion-0"
    >
      this is kicker 
    </span>
    <h1
      class="nk-headline-heading emotion-1"
    />
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with overriden props 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a68c1;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<section
    class="emotion-1"
  >
    <h1
      class="nk-headline-heading emotion-0"
    />
  </section>
</DocumentFragment>
`;
